1998-12-29  Yo Ric Dude  <ricdude@ix.netcom.com>

	* clients.c, esd-server.h, esd.c, proto.c, samples.c: option to
	autosuspend after a number of seconds of audio inactivity.
	"esd -as SECS" to set timeout to SECS seconds, SECS > 0.
	* esd.c, clients.c: call esd_audio_pause() only if select has
 	returned no clients ready, and no samples are playing.  other
	miscellaneous tweaks to the when-to-sleep algorithm...
	* players.c: add a variable so we know if we're playing samples
	* all other server files: editorial changes, prettier for printing 
	
1998-12-27  Yo Ric Dude  <ricdude@ix.netcom.com>

	* proto.c: missed one code path for setting is_ok...
	* clients.c, esd-server.h, esd.c, esd.h, esdloop.c, esdsample.c, 
	filter.c, mix.c, players.c, proto.c: moved some prototypes to
	more logical locations, and general -ansi -Wall -pedantic stuff.
	* esd.c: added -h option for usage.

1998-12-22  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_alsa.c, clients.c: from bibek, more alsa patches and a
 	slightly more sane "can i pause" algorithm.

Mon Dec 21 21:44:44 EST 1998 Mandrake <mandrake@mandrake.net>

	* esdlib.c - fixed some warnings.


1998-12-21  Yo Ric Dude  <ricdude@ix.netcom.com>

	* clients.c, esd-server.h, esd.h, players.c, proto.c, samples.c:
 	Cleaned out the protocol handling.  Basically, there's now a table
 	of protocol handlers and how much data they each require.  Each
 	client has a buffer to hold the extra data for the current
 	protocol handler.  poll_client_requests() reads data one chunk at
 	a time, until it gets everything it needs for that request.  The
 	handler then gets its data directly from the buffer, instead of
 	messing around with all this state transition stuff.
	* configure.in: setting bin_SCRIPTS to include esd-config should
 	set the execute flag on the script when installed.
	* esdlib.c: this needs esd.h, not esd-server.h.
	* mix.c, esd-server.h: debugging info update.

Sat Dec 19 21:19:51 EST 1998 Mandrake <mandrake@mandrake.net>